syntax = "proto3";

package shared;

import "google/protobuf/empty.proto";

option go_package = "v1/proto";

service IdentityService {
  // User Management
  rpc GetUsers(google.protobuf.Empty) returns (GetUsersResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc StoreUser(StoreUserRequest) returns (StoreUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);

  // Role Management
  rpc GetRoles(google.protobuf.Empty) returns (RolesResponse);
  rpc GetRole(RoleRequest) returns (RoleResponse);
  rpc StoreRole(StoreRoleRequest) returns (StoreRoleResponse);
  rpc UpdateRole(UpdateRoleRequest) returns (UpdateRoleResponse);
  rpc DeleteRole(DeleteRoleRequest) returns (DeleteRoleResponse);

  // Permission Management
  rpc GetPermissions(google.protobuf.Empty) returns (PermissionsResponse);
  rpc GetPermission(PermissionRequest) returns (PermissionResponse);
  rpc StorePermission(StorePermissionRequest) returns (StorePermissionResponse);
  rpc UpdatePermission(UpdatePermissionRequest) returns (UpdatePermissionResponse);
  rpc DeletePermission(DeletePermissionRequest) returns (DeletePermissionResponse);
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string role = 4;
  string created_at = 6;
}

message Role {
  string id = 1;
  string name = 2;
  repeated Permission permissions = 3;
}

message Permission {
  int64 id = 1;
  string name = 2;
}

message GetUsersResponse {
  repeated User users = 1;
}

message GetUserRequest {
  string id = 1;
}

message RoleUserResponse {
  string name = 1;
  repeated string permissions = 2;
}

message GetUserResponse {
  string name = 1;
  string email = 2;
  string created_at = 4;
  RoleUserResponse role = 3;
  repeated string permissions = 5;
}

message StoreUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string role_id = 4;
}

message StoreUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  string id = 1;
  optional string name = 2;
  optional string email = 3;
  optional string role_id = 4;
}

message UpdateUserResponse {
  User user = 1;
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

message RolesResponse {
  repeated Role roles = 1;
}

message RoleRequest {
  string id = 1;
}

message RoleResponse {
  Role role = 1;
  repeated Permission permissions = 2;
}

message StoreRoleRequest {
  string name = 1;
  repeated string permission_ids = 2;
}

message StoreRoleResponse {
  Role role = 1;
}

message UpdateRoleRequest {
  string id = 1;
  optional string name = 2;
  repeated string permission_ids = 3;
}

message UpdateRoleResponse {
  Role role = 1;
}

message DeleteRoleRequest {
  string id = 1;
}

message DeleteRoleResponse {
  bool success = 1;
}

message PermissionsResponse {
  repeated Permission permissions = 1;
}

message PermissionRequest {
  int64 id = 1;
}

message PermissionResponse {
  Permission permission = 1;
}

message StorePermissionRequest {
  string name = 1;
}

message StorePermissionResponse {
  Permission permission = 1;
}

message UpdatePermissionRequest {
  int64 id = 1;
  optional string name = 2;
}

message UpdatePermissionResponse {
  Permission permission = 1;
}

message DeletePermissionRequest {
  int64 id = 1;
}

message DeletePermissionResponse {
  bool success = 1;
}
